labs/03-kyverno-policies/03-namespace-restriction/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: patch-policy-test
policies:
  - patch-policy.yaml
resources:
  - test-patch-policy.yaml
  - test-patch-policy-invalid.yaml
variables: values.yaml
results:
  - policy: patch-policy
    rule: check-policy-ns-label
    resources: 
      - "test-patch-policy"
    kind: EnvoyPatchPolicy
    result: skip
  - policy: patch-policy
    rule: check-policy-ns-label
    resources:
      - "test-patch-policy-invalid"
    kind: EnvoyPatchPolicy
    result: fail
