labs/03-kyverno-policies/03-namespace-restriction/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: mock-values
namespaceSelector:
  - name: test
    labels:
      platform: "true"
  - name: prod
    labels:
      platform: "false"
